# loctree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  SYNC-MANIFEST.md
loctree-ast/: Cargo.toml
loctree-ast/src/: lib.rs
loctree-ast/src/extractors/: js.rs  mod.rs  py.rs  ts.rs
loctree-ast/tests/: ast_smoke.rs  extractors.rs
loctree-lsp/: Cargo.toml  build.rs
loctree-lsp/queries/typescript/: lexical_declarations.scm
loctree-lsp/src/: aicx.rs  ast_query.rs  backend.rs  body.rs  code_lens.rs  context_atlas.rs  context_pack.rs  cursor.rs  diagnostic_codes.rs  diff.rs  find.rs  follow.rs  health.rs  hover.rs  impact.rs  lib.rs  live_ast.rs  main.rs  navigation.rs  protocol.rs  semantic.rs  slice.rs  snapshot.rs  symbol_context.rs  watcher.rs  workspaces.rs
loctree-lsp/src/actions/: atlas_card.rs  mod.rs  quickfix.rs  refactor.rs
loctree-lsp/src/diagnostics/: cycles.rs  dead.rs  mod.rs  twins.rs
loctree-lsp/tests/: aicx_request.rs  ast_query.rs  atlas_card_action.rs  body_request.rs  cli.rs  code_lens_request.rs  context_atlas_request.rs  context_pack_request.rs  cursor_smoke.rs  diff_request.rs  editor_command_parity.rs  find_request.rs  follow_request.rs  health_request.rs  impact_request.rs  live_ast.rs  multi_workspace.rs  semantic_request.rs  slice_request.rs  symbol_context_request.rs  symbol_context_stdio.rs  symbol_granularity.rs  watcher_smoke.rs
loctree-mcp/: Cargo.toml
loctree-mcp/src/: main.rs
loctree-rs/: Cargo.toml  LICENSE  build.rs  build_support.rs
loctree-rs/completions/: _loct  loct.bash
loctree-rs/docs/: memory-lint.md  react-lint.md  ts-lint.md
loctree-rs/src/: analysis_reports.rs  args.rs  atlas.rs  body.rs  colors.rs  config.rs  context_render.rs  context_scope.rs  context_stack.rs  detect.rs  diff.rs  focuser.rs  fs_utils.rs  git.rs  impact.rs  jaq_query.rs  layoutmap.rs  lib.rs  metrics.rs  pack.rs  progress.rs  query.rs  similarity.rs  slicer.rs  snapshot.rs  suppressions.rs  tree.rs  types.rs  watch.rs  watch_lock.rs
loctree-rs/src/aicx/: inprocess.rs  intent_source.rs  intents.rs  mcp.rs  mod.rs  shell.rs
loctree-rs/src/analyzer/: assets.rs  audit_report.rs  barrels.rs  cargo_manifest.rs  classify.rs  coverage.rs  coverage_gaps.rs  css.rs  cycles.rs  dart.rs  dist.rs  dist_vlq.rs  entrypoints.rs  findings.rs  for_ai.rs  frameworks.rs  go.rs  graph.rs  health_score.rs  html.rs  html_analyzer.rs  insights.rs  js.rs  makefile.rs  manifests.rs  memory_lint.rs  mod.rs  occurrences.rs  open_server.rs  output.rs  pipelines.rs  react_lint.rs  regexes.rs  report.rs  resolvers.rs  root_scan.rs  route_twins.rs  runner.rs  sarif.rs  scan.rs  (+11 more)
loctree-rs/src/analyzer/ast_js/: calls.rs  config.rs  exports.rs  imports.rs  mod.rs  sfc.rs  template.rs  visitor.rs
loctree-rs/src/analyzer/c_family_syntax/: includes.rs  mod.rs  symbols.rs  usages.rs
loctree-rs/src/analyzer/crowd/: clustering.rs  mod.rs  output.rs  similarity.rs  types.rs
loctree-rs/src/analyzer/dead_parrots/: filters.rs  languages.rs  mod.rs  output.rs  runtime_apis.rs  search.rs
loctree-rs/src/analyzer/env_truth/: discovery.rs  docker_compose.rs  dockerfile.rs  dotenv.rs  gha.rs  helm.rs  io_helpers.rs  k8s.rs  mod.rs  npm_script.rs  precedence.rs  sops_marker.rs  types.rs  warnings.rs
loctree-rs/src/analyzer/indexstore/: mod.rs  reader.rs
loctree-rs/src/analyzer/occurrences/: reporting.rs  summary.rs
loctree-rs/src/analyzer/py/: concurrency.rs  decorators.rs  dynamic.rs  exports.rs  helpers.rs  imports.rs  metadata.rs  mod.rs  stdlib.rs  usages.rs
loctree-rs/src/analyzer/rust/: imports.rs  mod.rs  naming.rs  preprocess.rs  tauri.rs  usages.rs
loctree-rs/src/analyzer/scip/: mod.rs  proto.rs  scip.proto
loctree-rs/src/cli/: entrypoint.rs  mod.rs
loctree-rs/src/cli/command/: global.rs  help.rs  help_texts.rs  mod.rs  options.rs  parsed.rs  types.rs
loctree-rs/src/cli/dispatch/: mod.rs
loctree-rs/src/cli/parser/: analysis_commands.rs  context_commands.rs  core.rs  helpers.rs  misc_commands.rs  mod.rs  output_commands.rs  scan_commands.rs  tauri_commands.rs
loctree-rs/src/refactor_plan/: mod.rs  output.rs
loctree-rs/src/semantic/: c_family.rs  io.rs  make.rs  mod.rs  python.rs  rust.rs  shell.rs  tauri.rs
loctree-rs/src/semantic/idioms/: loader.rs  make.toml  mod.rs  python.toml  rust.toml  shell.toml  tauri.toml
loctree-rs/src/symbols/: mod.rs  query.rs  resolve.rs
loctree-rs/tests/: agent_index_contract.rs  build_provenance.rs  context_pack_contract.rs  context_perf_canary.rs  e2e_cli.rs  include_ignored_override.rs  indexstore_import.rs  metrics_parity_contract.rs  no_self_shellout.rs  parser_languages.rs  prism_schema_golden.rs  scip_import.rs  scorecard_rg_parity.rs  semantic_acceptance.rs  swift_extraction.rs  symbol_graph_roundtrip.rs  ts_extractors_parity.rs  ts_extractors_ts.rs  watch_lock_cli.rs
loctree-rs/tests/fixtures/: prism_v1_minimal.json  snapshot_v0_10_2.json
loctree-rs/tests/fixtures/artifact_fence/: .env.example
loctree-rs/tests/fixtures/astro_app/: package.json
loctree-rs/tests/fixtures/cfamily/: README.md
loctree-rs/tests/fixtures/dead_truth_spawn/: Cargo.toml  package.json
loctree-rs/tests/fixtures/env_drift/: .env  Dockerfile  README.md  (+1 more)
loctree-rs/tools/tests/: dist.test.mjs
reports/: Cargo.toml  README.md  TWINS_GRAPH_SUMMARY.md  loct-find-compare-0.8.8-vs-0.8.9-dev.md  loct-find-compare-0.8.8-vs-0.8.9-dev.txt  loctree-release-contract-research-2026-03-27.md  report.html  test-crowds-visualization.html  test-severity.html
reports/lsp/: 22-context-scope-flag.md  23-wire-html-layer-into-real-analyzer-flow.md  24-polish-html-artifacts-to-loctree-com-styling-discipline.md
reports/src/: INTEGRATION_NOTES.md  TWINS_GRAPH_README.md  TWINS_INTEGRATION_GUIDE.md  graph_bootstrap.js  lib.rs  styles.rs  types.rs  wasm_loader.js
reports/src/components/: atlas_view.rs  context_atlas.rs  document.rs  hotspots.rs  icons.rs  insights.rs  mod.rs  refactor_plan.rs  section.rs  tools_view.rs
reports/wasm/: build.sh
reports/wasm/src/: lib.rs
(+154 files in other folders)
