[package]
name = "loctree-lsp"
version.workspace = true
build = "build.rs"
edition.workspace = true
description = "Language Server Protocol server for loctree"
repository = "https://github.com/Loctree/loctree-lsp"
license.workspace = true
authors.workspace = true

[[bin]]
name = "loctree-lsp"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tower-lsp = "0.20"
lsp-types = "0.95"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { workspace = true }
loctree = { workspace = true }
loctree-ast = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6"
dashmap = "5"
anyhow = "1"
tower = "0.4"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
globset = "0.4"
sha2 = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
