[package]
name = "loctree-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for loctree - hot codebase analysis for AI agents"
license.workspace = true
authors.workspace = true
repository = "https://github.com/Loctree/loctree-ast"
homepage = "https://loct.io"
documentation = "https://docs.rs/loctree-mcp"
rust-version.workspace = true
keywords = ["mcp", "loctree", "ai", "code-analysis", "agents"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# MCP Protocol
rmcp = { workspace = true, features = ["server", "transport-io"] }

# Loctree core (workspace version)
loctree = { workspace = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for symbol search
regex = "1.10"

# Schema generation for MCP tools
schemars = "1.1"

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Unix signal handling (for SIGPIPE) — MUST stay LAST in [dependencies] section
# because [target.*.dependencies] sections silently consume all following keys
# until the next bracketed header.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
