[package]
name = "loctree"
version.workspace = true
edition.workspace = true
default-run = "loctree"
authors.workspace = true
description = "Structural code intelligence for AI agents. Scan once, query everything."
license.workspace = true
repository = "https://github.com/Loctree/loctree"
# Keep the published crate lean: integration fixtures are large and only feed
# the in-repo e2e suite, never downstream builds.
exclude = ["tests/fixtures"]
homepage = "https://loct.io"
rust-version.workspace = true
readme = "../README.md"
keywords = ["static-analysis", "dependency-graph", "dead-exports", "mcp", "ai-agents"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "loctree"
path = "src/lib.rs"

[[bin]]
name = "loctree"
path = "src/bin/loctree.rs"

[[bin]]
name = "loct"
path = "src/bin/loct.rs"

[dependencies]
aicx = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { workspace = true }
prost = { version = "0.14", optional = true }
json-five = "0.3"
regex = "1.12"
globset = "0.4"
heck = "0.5"
time = { version = "0.3", features = ["formatting"] }
report-leptos = { workspace = true }
# Local repository analysis does not need git network transports. Keep libgit2
# vendored so release binaries stay portable instead of inheriting Homebrew dylibs.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
toml = "1.0"
urlencoding = "2.1"
once_cell = "1.19"
rmcp = { workspace = true, features = ["client", "transport-child-process"] }

# AST Parsing (TypeScript/JavaScript) - OXC + tree-sitter (Plan 19 Stage 1)
loctree-ast = { workspace = true }
oxc_allocator = "0.128"
oxc_parser = "0.128"
oxc_span = "0.128"
oxc_ast = "0.128"
oxc_ast_visit = "0.128"
oxc_semantic = "0.128"
tempfile = "3"

tokio = { version = "1.0", features = ["rt-multi-thread"] }

# Progress UI (spinners, progress bars)
indicatif = "0.18"
console = "0.16"
anyhow = "1.0"
walkdir = "2.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"

# jq-compatible filtering for query mode
jaq-core = "3.0"
jaq-std = "3.0"
jaq-json = "2.0"

# Fuzzy string matching for command suggestions
strsim = "0.11"

# Cache directory resolution
sha2 = "0.11"
dirs = "6"

# Watch mode for live snapshot refresh
notify = "8.0"
notify-debouncer-full = "0.7"

# Cross-platform advisory file locking (kernel flock on Unix, LockFileEx on
# Windows). Backs the single-instance guard for `loct scan --watch` /
# `loct watch` so a SIGKILL-ed holder self-heals on fd close.
fs4 = "0.13"

# C-family (Swift / ObjC / C / C++) symbol extraction — Wave B tree-sitter
# grammars feeding the snapshot symbol_graph (loctree.symbol_graph.v1).
tree-sitter = "0.25"
tree-sitter-swift = "0.7.3"
tree-sitter-objc = "3.0.2"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"

# Direct libc bindings used by the watch lock module for SIGTERM-based
# `--replace` handover and `setsid()` detachment on `loct watch --bg`.
# Both are Unix-only; the corresponding code paths are `#[cfg(unix)]`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
regex = "1.12"
serial_test = "3.2"

[features]
default = ["aicx-inprocess"]
aicx-inprocess = ["dep:aicx"]
deep-index = ["dep:prost"]
# macOS-only Swift/Objective-C deep mode. The feature gates an opportunistic
# reader for existing Apple IndexStore data; non-macOS builds compile it out.
deep-index-macos = []
