[package]
name = "report-leptos"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Leptos SSR renderer for generating static HTML reports - beautiful, interactive, type-safe"
license.workspace = true
publish = false
repository = "https://github.com/Loctree/Loctree"
homepage = "https://github.com/Loctree/Loctree"
readme = "README.md"
keywords = ["leptos", "ssr", "html", "report", "static-site"]
categories = ["web-programming", "template-engine", "visualization"]
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
leptos = { version = "0.8", default-features = false, features = ["ssr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
# Future: graph-bundle = [] # Bundle Cytoscape JS inline

[[example]]
name = "basic_report"
path = "examples/basic_report.rs"

[[example]]
name = "with_graph"
path = "examples/with_graph.rs"
